fix: prevent flickering scrollreveal

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,10 @@ a {
   box-sizing: border-box;
 }
 
+html.sr .load-hidden {
+  visibility: hidden;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
